--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www.mastermindabacusbd.com [NC]
+RewriteRule ^(.*)$ http://mastermindabacusbd.com/$1 [L,R=301]
 </IfModule>
