--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "type": "library",
   "require": {
     "shipu/bkash": "dev-master",
-    "vlucas/phpdotenv": "^5.2"
+    "vlucas/phpdotenv": "^5.2",
+    "ext-curl": "*",
+    "ext-json": "*"
   },
   "license": "MIT",
   "authors": [
